popup menu test

--- a/www/templates/4steps.html
+++ b/www/templates/4steps.html
@@ -1,4 +1,4 @@
-<ion-view view-title="Cycles">
+<ion-view view-title="4 Steps">
 <ion-nav-title>
     <img src="img/logo.png" class="title-image" />
 </ion-nav-title>
@@ -11,7 +11,7 @@
         <div class="padding">
             <p>To break out of destructive conflict, you have to connect to your truth and then consciously make a choice to respond with a new action. The best way to do this is to follow a four-step method that helps train the brain for a new response. Current research tells us that we can change unhealthy patterns in our brains!</p>
             <button ui-sref="menu.tabs.4steps_setup" class="button button-block button-positive">Your 4 Steps</button>
-            <button ui-sref="menu.tabs.4steps_setup_results" class="button button-block button-calm">View your last 4 Steps</button>
+            <button ui-sref="menu.tabs.4steps_results" class="button button-block button-calm">View your last 4 Steps</button>
 		</div>
 	</ion-content>
 </ion-view>
