--- a/www/templates/4steps_setup.html
+++ b/www/templates/4steps_setup.html
@@ -1,4 +1,4 @@
-<ion-view view-title="Cycles">
+<ion-view view-title="4 Steps">
 <ion-nav-title>
     <img src="img/logo.png" class="title-image" />
 </ion-nav-title>
@@ -34,7 +34,7 @@
          <div class="grey_bg">
             <div class="padding">
              <p>If your pain was connected to a conflict with someone, decide on a time to share your 4 Steps with the person. Use the section below to record your 4 Steps to reference later.</p>
-                <form name="stepsForm" novalidate="" ng-submit="process('menu.tabs.home',stepsForm)">
+                <form name="stepsForm" novalidate="" ng-submit="process('menu.tabs.4steps_results',stepsForm)">
                 <div class="list list-inset">
                   <label class="item item-input item-stacked-label">
                     STEP 1 — I FEEL:
