--- a/www/templates/cycles_results.html
+++ b/www/templates/cycles_results.html
@@ -38,7 +38,7 @@
             </div>
             <div class="padding">
                 <button ui-sref="menu.tabs.cycles_peace" class="button button-block button-positive">Edit Your Peace Cycle</button>
-                <button ui-sref="menu.tabs.cycles_pain" class="button button-block button-calm">Discover Your Pain Cycle</button>
+                <button ui-sref="menu.tabs.cycles_pain" class="button button-block button-calm">View Your Pain Cycle</button>
                 <button ui-sref="menu.tabs.cycles_peace" class="button button-block button-calm">Sync with your spouse</button>
             </div>
         </div>
