--- a/www/templates/quizzes_boundaries.html
+++ b/www/templates/quizzes_boundaries.html
@@ -6,7 +6,8 @@
 		<h2>
 			<img src="img/quiz-icon-small.png" class="cycles-icon" />&nbsp;Boundaries Quiz</h2>
 		<div class="padding">
-			<p>Choose the statement that best represtents where you are today.</p>
+			<p>Having clear boundaries in your relationships will help you guard against the burnout, unrealistic expectations, feelings of inadequacy, and loneliness.  Clear boundaries take both fact and emotion into the decision-making process.</p>
+			<p><b>How are you doing with boundaries in the following categories?</b></p>
 		</div>
 		<form class="quizzesUnessForm" name="quizzesUnessForm" novalidate="" ng-submit="process('menu.tabs.quizzes_boundaries_results',quizzesUnessForm)">
 			<div ng-repeat="question in boundariesQuestions">
