--- a/www/templates/decisions_revisit.html
+++ b/www/templates/decisions_revisit.html
@@ -1,4 +1,4 @@
-<ion-view view-title="Cycles">
+<ion-view view-title="Decisions">
 <ion-nav-title>
     <img src="img/logo.png" class="title-image" />
 </ion-nav-title>
@@ -11,7 +11,7 @@
             </div>
             <div class="grey_bg">
                 <div class="padding">
-                    <p>###Decision Sample one</p>
+					<p ng-repeat="(key,decision) in user.data.decisions"><a ui-sref="menu.tabs.decisions_edit({decision:$index})">{{decision.question}}</a></p>
                 </div>
             </div>
             <ul class="list">
