--- a/www/templates/menu.html
+++ b/www/templates/menu.html
@@ -19,9 +19,9 @@
 					<span class="threeleaf">h</span>Welcome</ion-item>
 				<ion-item nav-clear="" menu-close="" ui-sref="menu.tabs.about">
 					<span class="threeleaf">h</span>About Us</ion-item>
-				<ion-item nav-clear="" menu-close="" ui-sref="menu.tabs.find_group">
+				<ion-item nav-clear="" menu-close="" onclick="window.open('http://marriagestrong.com/groups','_system','location=yes')">
 					<span class="threeleaf">S</span>Find a Group</ion-item>
-				<ion-item nav-clear="" menu-close="" ui-sref="menu.tabs.lead_group">
+				<ion-item nav-clear="" menu-close=""onclick="window.open('http://family.pepperdine.edu/marriagestrong/leader-training.htm','_system','location=yes')">
 					<span class="threeleaf">M</span>Lead a Group</ion-item>
 				<ion-item nav-clear="" menu-close="" ui-sref="menu.tabs.resources">
 					<span class="threeleaf">R</span>Resources</ion-item>
