--- a/scss/ionic.app.scss
+++ b/scss/ionic.app.scss
@@ -163,7 +163,7 @@ h4 {
 }
 
 h5 {
-    font-size: 16px;
+    font-size: 12px;
     font-weight: bolder;
     line-height: 18px;
 }
@@ -631,13 +631,15 @@ li.item  {
 .cycles-results {
     display: block;
     position: absolute;
-    margin: 24% 10% 5%;
+    margin: 23% 10% 5%;
+    line-height: 15px;
     
     h5 {
         text-transform: uppercase;
-        line-height: 12px;
+        line-height: 10px;
         margin-bottom: 0px;
         color: $positive;
+        padding-bottom: 5px;
     }
     
     img {
@@ -665,6 +667,7 @@ li.item  {
     float: left;
     text-align: center;
     vertical-align: middle;
+    min-height: 80px;
 }
 .top-right {
     width: 25%;
@@ -681,6 +684,7 @@ li.item  {
     float: left;
     text-align: center;
     vertical-align: middle;
+    min-height: 80px;
 }
 .middle-middle {
     width: 0%;
@@ -693,6 +697,7 @@ li.item  {
     float: left;
     text-align: center;
     vertical-align: middle;
+    min-height: 80px;
 }
 
 .bottom-left {
@@ -706,6 +711,7 @@ li.item  {
     float: left;
     text-align: center;
     vertical-align: middle;
+    min-height: 80px;
 }
 .bottom-right {
     width: 25%;
