patrick thursday the 20th 3:06

--- a/scss/ionic.app.scss
+++ b/scss/ionic.app.scss
@@ -168,6 +168,13 @@ h5 {
     line-height: 18px;
 }
 
+h6 {
+    font-size: 14px;
+    font-weight: bolder;
+    line-height: 18px;
+    color: $positive;
+}
+
 
 hr {
     border: 0;
