--- a/www/templates/decisions_revisit.html
+++ b/www/templates/decisions_revisit.html
@@ -11,6 +11,17 @@
             </div>
             <div class="grey_bg">
                 <div class="padding">
+                    <h6>My Problem</h6>
+                    <p>###PROBLEM</p>
+                    <h6>Us Solution</h6>
+                    <p>###USSOLUTION</p>
+                    <h6>My Solutions</h6>
+                    <p>###MYSOLUTIONS</p>
+                    <p>###MYSOLUTIONS</p>
+                    <p>###MYSOLUTIONS</p>
+                    <p>###MYSOLUTIONS</p>
+                    <p>###MYSOLUTIONS</p>
+                    <p>###MYSOLUTIONS</p>
 					<p ng-repeat="(key,decision) in user.data.decisions"><a ui-sref="menu.tabs.decisions_edit({decision:$index})">{{decision.question}}</a></p>
                 </div>
             </div>
