--- a/www/templates/4steps_results.html
+++ b/www/templates/4steps_results.html
@@ -26,7 +26,7 @@
 			<div class="foursteps-results-answer">{{user.data.steps.step4}}</div>
 		</div>
 		<div class="padding">
-			<button ui-sref="menu.tabs.4steps" class="button button-block button-calm">4 Steps Landing Page</button>
+			<button ui-sref="menu.tabs.4steps" class="button button-block button-calm">4 Steps Home</button>
 		</div>
 	</ion-content>
 </ion-view>
