--- a/www/templates/cycles_peace.html
+++ b/www/templates/cycles_peace.html
@@ -10,7 +10,8 @@
             • Spiritual resources, and <br>
             • The messages you believe about yourself.<br>
         </p>
-        <p>In creating your Peace Cycle choose truths that replace the feelings/negative messages in your pain cycle. The truth about me is I am (choose up to three):</p></div>
+        <p>In creating your Peace Cycle choose truths that replace the feelings/negative messages in your pain cycle. The list below is not exhaustive; pick the words that resonate closest to your personal truths.</p>
+        <p>The truth about me is I am (choose up to three):</p></div>
         <div class="padding">
             <form name="cyclesPeaceForm" novalidate="" ng-submit="process('menu.tabs.cycles_peace_response',cyclesPeaceForm)">
              <ul class="cycles-peace list">
