--- a/www/templates/decisions_create.html
+++ b/www/templates/decisions_create.html
@@ -63,7 +63,7 @@
 				<p>An Us decision does not include the thought, “okay, we will do it your way this time.” You must decide together.</p>
 				<p>
 					<img src="img/icon_calendar.png" class="cycles-icon" style="float: left; margin: 0px 15px 15px 0px;" />Choose a date in the future to reevaluate your choice. Your MarriageStrong app will remind you on this date to revisit your decision.</p>
-				<input type="submit" value="Save and Continue" class="button button-block button-positive" />
+				<input type="submit" value="Save" class="button button-block button-positive" />
 			</div>
 			<br>
 		</form>
