--- a/www/templates/products.html
+++ b/www/templates/products.html
@@ -4,7 +4,7 @@
 		<div class="padding">
 			<h1>Products</h1>
             <br><p>5 Days to a new Marriage:</p><a href="#" onclick="window.open('http://5daystoanewmarriage.com/product','_system','location=yes')">5daystoanewmarriage.com/product</a>
-            <br><br><br><p>Restoration Therapy:</p> <a href="#" onclick="window.open('http://restorationtherapytraining.comt','_system','location=yes')">restorationtherapytraining.com</a>
+            <br><br><br><p>Restoration Therapy:</p> <a href="#" onclick="window.open('http://www.restorationtherapytraining.com/','_system','location=yes')">restorationtherapytraining.com</a>
 		</div>
 	</ion-content>
 </ion-view>
