--- a/www/templates/quizzes_usness.html
+++ b/www/templates/quizzes_usness.html
@@ -6,7 +6,7 @@
 		<h2>
 			<img src="img/quiz-icon-small.png" class="cycles-icon" />&nbsp;Us-ness Quiz</h2>
 		<div class="padding">
-			<p>Choose the statement that best represtents where you are today.</p>
+			<p>How's your Us-ness (you and your spouse) doing in the following categories?</p>
 		</div>
 		<form class="quizzesUnessForm" name="quizzesUnessForm" novalidate="" ng-submit="process('menu.tabs.quizzes_usness_results',quizzesUnessForm)">
 			<div ng-repeat="question in usnessQuestions">
