--- a/www/templates/cycles_results.html
+++ b/www/templates/cycles_results.html
@@ -1,46 +1,56 @@
 <ion-view view-title="Cycles">
-<ion-nav-title>
-    <img src="img/logo.png" class="title-image" />
-</ion-nav-title>
+	<ion-nav-title>
+		<img src="img/logo.png" class="title-image" />
+	</ion-nav-title>
 	<ion-content>
-        <h2><img src="img/cycle-icon-small.png" class="cycles-icon" />&nbsp;Pain and Peace Cycles</h2>
-                <h4>My Peace Cycle</h4>
-        <div class="cycles">
-            <div class="cycles-results">
-                <div class="top-left"><img src="img/top-left-arrow.svg" class="top-left-arrow" width="100%" /></div>
-                <div class="top-middle">                
-                    <h5>Your Truths</h5>
-                   <span ng-repeat="(truth, val) in user.data.usness.truths" ng-if="val">{{truth}}<br /></span>
-                </div>
-                <div class="top-right"><img src="img/top-right-arrow.svg" class="top-right-arrow" width="100%" /></div>
-                <div class="middle-left">
-                    <h5>Spouse's Actions</h5>
-                    ###Answer One<br>
-                    ###Answer Two<br>
-                    ###Answer Three
-                </div>
-                <div class="middle-middle"></div>
-                <div class="middle-right">                
-                    <h5>Your Actions</h5>
-                     <span ng-repeat="(action, val) in user.data.usness.actions" ng-if="val">{{action}}<br /></span>
-                </div>
-                <div class="bottom-left"><img src="img/bottom-left-arrow.svg" class="bottom-left-arrow" width="100%" /></div>
-                <div class="bottom-middle">
-                    <br><h5>Spouse's Truths</h5>
-                    ###Answer One<br>
-                    ###Answer Two<br>
-                    ###Answer Three
-                </div>
-                <div class="bottom-right"><img src="img/bottom-right-arrow.svg" class="bottom-right-arrow" width="100%" /></div>
-            </div>
-            <div class="circle-cycle">
-                <img src="img/circle.svg" class="bottom-right-arrow" width="100%" />
-            </div>
-            <div class="padding">
-                <button ui-sref="menu.tabs.cycles_peace" class="button button-block button-positive">Edit Your Peace Cycle</button>
-                <button ui-sref="menu.tabs.cycles_pain" class="button button-block button-calm">View Your Pain Cycle</button>
-                <button ui-sref="menu.tabs.cycles_peace" class="button button-block button-calm">Sync with your spouse</button>
-            </div>
-        </div>
+		<h2>
+			<img src="img/cycle-icon-small.png" class="cycles-icon" />&nbsp;Pain and Peace Cycles</h2>
+		<h4>My Peace Cycle</h4>
+		<div class="cycles">
+			<div class="cycles-results">
+				<div class="top-left">
+					<img src="img/top-left-arrow.svg" class="top-left-arrow" width="100%" />
+				</div>
+				<div class="top-middle">
+					<h5>Your Truths</h5>
+					<span ng-repeat="(truth, val) in user.data.usness.truths" ng-if="val">{{truth}}
+						<br />
+					</span>
+				</div>
+				<div class="top-right">
+					<img src="img/top-right-arrow.svg" class="top-right-arrow" width="100%" />
+				</div>
+				<div class="middle-left">
+					<h5>Spouse's Actions</h5>###Answer One
+					<br>###Answer Two
+					<br>###Answer Three</div>
+				<div class="middle-middle"></div>
+				<div class="middle-right">
+					<h5>Your Actions</h5>
+					<span ng-repeat="(action, val) in user.data.usness.actions" ng-if="val">{{action}}
+						<br />
+					</span>
+				</div>
+				<div class="bottom-left">
+					<img src="img/bottom-left-arrow.svg" class="bottom-left-arrow" width="100%" />
+				</div>
+				<div class="bottom-middle">
+					<br>
+					<h5>Spouse's Truths</h5>###Answer One
+					<br>###Answer Two
+					<br>###Answer Three</div>
+				<div class="bottom-right">
+					<img src="img/bottom-right-arrow.svg" class="bottom-right-arrow" width="100%" />
+				</div>
+			</div>
+			<div class="circle-cycle">
+				<img src="img/circle.svg" class="bottom-right-arrow" width="100%" />
+			</div>
+			<div class="padding">
+				<button ui-sref="menu.tabs.cycles_peace" class="button button-block button-calm">Sync with your spouse</button>
+				<button ui-sref="menu.tabs.cycles_peace" class="button button-block button-positive">Edit Your Peace Cycle</button>
+				<button ui-sref="menu.tabs.cycles_pain" class="button button-block button-calm">View Your Pain Cycle</button>
+			</div>
+		</div>
 	</ion-content>
 </ion-view>
