--- a/www/templates/profile.html
+++ b/www/templates/profile.html
@@ -17,7 +17,7 @@
 				<div class="list list-inset">
 					<h5>Spouse's Name</h5>
 					<button ng-if="!user.Spouse.id" ui-sref="menu.tabs.link" class="button button-block button-calm">Link to Spouse’s Account</button>
-                    <span class="profile-name">{{user.Spouse.first_name}} {{user.Spouse.last_name}}</span>
+                    <span ng-if="user.Spouse.id" class="profile-name">{{user.Spouse.first_name}} {{user.Spouse.last_name}}</span>
 				</div>
 				<!--Needs Validation-->
 				<div class="list list-inset">
