--- a/www/templates/resources.html
+++ b/www/templates/resources.html
@@ -6,7 +6,7 @@
             <br>
 			<ul>
 				<li>Boone Center for the Family:<br>  <a href="#" onclick="window.open('http://family.pepperdine.edu','_system','location=yes')">family.pepperdine.edu</a><br><br></li>
-				<li>Fuller/Marriage &amp; Family Therapy Dept:<br> <a href="#" onclick="window.open('http://fuller.edu/mft','_system','location=yes')">fuller.edu/mft</a><br><br></li>
+				<li>Fuller/Marriage &amp; Family Therapy Department:<br> <a href="#" onclick="window.open('http://fuller.edu/mft','_system','location=yes')">fuller.edu/mft</a><br><br></li>
 				<li>5 Days to a New Marriage:<br> <a href="#" onclick="window.open('http://5daystoanewmarriage.com','_system','location=yes')">5daystoanewmarriage.com</a><br><br></li>
 				<li>Hideaway Experience:<br> <a href="#" onclick="window.open('http://intensives.com','_system','location=yes')">intensives.com</a><br><br></li>
 			</ul>
