syncs and updates

--- a/www/templates/cycles_pain.html
+++ b/www/templates/cycles_pain.html
@@ -4,7 +4,11 @@
 </ion-nav-title>
 	<ion-content>
         <h2><img src="img/cycle-icon-small.png" class="cycles-icon" />&nbsp;Discover Your Pain Cycle</h2>
-        <div class="paragraph-list"><p>When I am in conflict with my spouse, I commonly feel (choose up to three):</p></div>
+        <div class="paragraph-list">
+        	<p>When I am in conflict with my spouse, I commonly feel (choose up to three):</p>
+			<h5>HELPFUL HINT</h5>
+			<p>A feeling tells you something about your identity or your safety. For instance when in conflict you might feel inadequate or unloved, unsafe or alone. Words like angry or frustrated are more about what you do than what you feel. </p>
+        </div>
         <div class="padding">
             <form name="cyclesPainForm" novalidate="" ng-submit="process('menu.tabs.cycles_pain_copes',cyclesPainForm)">
              <ul class="cycles-pain list">
