--- a/www/templates/cycles_pain_copes.html
+++ b/www/templates/cycles_pain_copes.html
@@ -15,7 +15,7 @@
 						</label>{{cope}}</li>
 				</ul>
 				<div class="tip-text">
-					<p>REFLECT A SEC:</p>
+					<h1><img src="img/icon-reflect-small.png" class="cycles-icon" />&nbsp;REFLECT A SEC:</h1>
 					<p>Where did you learn how to cope like this? Did someone model this behavior for you or did you have to employ this coping to survive? For instance, if you grew up in a house of anger, you might have withdrawn to cope. Again, typically this coping existed before you married.</p>
 					<br>
 				</div>
