--- a/www/templates/usness_activities_further.html
+++ b/www/templates/usness_activities_further.html
@@ -22,7 +22,7 @@
 				<img src="img/icon-further-small.png" class="cycles-icon" />&nbsp;TAKE IT FURTHER</h1>
 			<p>1. Talk with your spouse about 3 of the activities you chose for your Us; share what they mean to you and how you believe they make your Us more connected.
 				<br>
-				<br>2. Based on the activities you chose what are 3 collective characteristics of your Us identity:</p>
+				<br>2. Based on the activities you chose what are 3 characteristics of your Us identity:</p>
 		</div>
 		<form class="usnessFurtherForm" name="usnessFurtherForm" novalidate="" ng-submit="process('menu.tabs.usness',usnessFurtherForm)">
 			<div class="grey_bg">
