--- a/www/templates/usness_gifts.html
+++ b/www/templates/usness_gifts.html
@@ -21,7 +21,7 @@
 			</div>
 			<div class="grey_bg">
 				<div class="padding">
-					<p>All the above gifts are found in I Corinthians 12, Romans 12 and Ephesians 4. Other spiritual gifts tests include gifts not listed above. Feel free to add to the list:</p>
+					<p>All the above gifts are found in I Corinthians 12, Romans 12 and Ephesians 4. Other spiritual gifts tests include gifts not listed above. If you didn't find 3 gifts above, add to the list:</p>
 					<div class="list list-inset">
 						<label class="item item-input">1 &nbsp;
 							<input name="gift" type="text" ng-model="user.data.usness.gifts_other.other1" ng-change="checkGiftOther(user.data.usness.gifts_other.other1,'other1')" ng-disabled="giftCount>=3 && !user.data.usness.gifts_other.other1" />
