--- a/www/templates/products.html
+++ b/www/templates/products.html
@@ -3,8 +3,11 @@
         <img src="img/header-image.jpg" class="header-image" width="100%" />
 		<div class="padding">
 			<h1>Products</h1>
-            <br><p>5 Days to a new Marriage:</p><a href="#" onclick="window.open('http://5daystoanewmarriage.com/product','_system','location=yes')">5daystoanewmarriage.com/product</a>
-            <br><br><br><p>Restoration Therapy:</p> <a href="#" onclick="window.open('http://www.restorationtherapytraining.com/','_system','location=yes')">restorationtherapytraining.com</a>
+			<p>For lay leaders, churches, and Christian organizations</p>
+			<p><b>5 Days to a new Marriage:</b></p><a href="#" onclick="window.open('http://5daystoanewmarriage.com/product','_system','location=yes')">5daystoanewmarriage.com/product</a>
+            <br><br><br>
+			<p>For mental health professionals</p>
+			<p><b>Restoration Therapy:</b></p> <a href="#" onclick="window.open('http://www.restorationtherapytraining.com/','_system','location=yes')">restorationtherapytraining.com</a>
 		</div>
 	</ion-content>
 </ion-view>
